syntax = "proto3";
package vesta.vm;

// this line is used by starport scaffolding # proto/tx/import

option go_package = "github.com/VestaProtocol/vesta/x/vm/types";

// Msg defines the Msg service.
service Msg {
  rpc Store(MsgStore) returns (MsgStoreResponse);
  rpc Execute(MsgExecute) returns (MsgExecuteResponse);
  rpc Instantiate(MsgInstantiate) returns (MsgInstantiateResponse);
    rpc Upgrade(MsgUpgrade) returns (MsgUpgradeResponse);
  rpc Cron(MsgCron) returns (MsgCronResponse);
// this line is used by starport scaffolding # proto/tx/rpc
}

message MsgStore {
  string creator = 1;
  string source = 2;
}

message MsgStoreResponse { string code = 1; }

message MsgExecute {
  string creator = 1;
  string contract = 2;
  string function = 3;
  string args = 4;
}

message MsgExecuteResponse { string console = 1; }

message MsgInstantiate {
  string creator = 1;
  string name = 2;
  string code = 3;
}

message MsgInstantiateResponse {}

message MsgUpgrade {
  string creator = 1;
  string contract = 2;
  string code = 3;
}

message MsgUpgradeResponse {
}

message MsgCron {
  string creator = 1;
  string contract = 2;
  string function = 3;
  string interval = 4;
}

message MsgCronResponse {
}

// this line is used by starport scaffolding # proto/tx/message
